# PiZeroCam

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt  main.cpp
doc/: Setting Ubuntu VM for R-Pi Cross Compilation.docx
tools/: buildExternalDependency.cmake  mysetup.sh  pizero-toolchain.cmake
